--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,7 +5,7 @@
     left: 0;
 
     .full-screen-mode &{
-        display: flex;
+        display: inline-block;
     }
 }
 .nav{
