--- a/sass/_themes.scss
+++ b/sass/_themes.scss
@@ -2,7 +2,7 @@
 //using css variables, since that messes up default link colors
 //when variables are unset
 
-:root{
+body{
     --main-bg-color: white;
     --pinned-controls-bg-color: white;
     --main-text-color: black;
