--- a/sass/_zoom-bar.scss
+++ b/sass/_zoom-bar.scss
@@ -38,8 +38,13 @@
 		border-top: $controls_border;
 		//-1 pixel so it hides border
         width: calc(100% - #{$pinned_dither_controls_width});
+        //chrome scrollbars take up 15px from bottom
         .full-screen-mode &{
             bottom: 15px;
+        }
+        //firefox takes into account scrollbars and doesn't overlap them
+        .full-screen-mode:-moz-full-screen &{
+            bottom: 0;
         }
         label{
             display: flex;
